# wachtzin

./: .gitignore  README.md  main.py  pyproject.toml  wordlist-easy.txt
aivd/: 2010.txt  2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  combined.txt
sources/: marsman.txt  nijhof.txt  vangeel.txt
