[tool.poetry]
name = "wachtzin"
version = "0.1.0"
description = ""
authors = ["Laurens van Dijk <laurens.vandijk@kpn-cert.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
structlog = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
