[tool.poetry]
name = "wachtzin"
version = "0.1.0"
description = ""
authors = ["Laurens van Dijk <laurens.vandijk@kpn-cert.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
structlog = "^20.1.0"
numpy = "^1.19.4"
markovify = "^0.8.3"
spacy = "^2.3.2"
Unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
